Fix slightly too narrow width on $md

--- a/_sass/components/_article.scss
+++ b/_sass/components/_article.scss
@@ -91,7 +91,7 @@
 	margin-right: 12px;
 	transition: margin-right .2s $easing;
 
-	@include breakpoint($md) {
+	@include breakpoint($lg) {
 		margin-right: 0;
 	}
 }
